# ahbk

./: ahbk  flake.nix
api/: .env  pyproject.toml
api/ahbk_api/: config.py  main.py  models.py
api/alembic/: env.py
api/alembic/versions/: 9afc2d6cf6a9_create_greeting_table.py
api/auth/: __init__.py  models.py  user.py
api/db/: init.py  meta.py  migrate.py  setup.py
api/tests/: test_user_basic.py
env/: .env
secrets/: ahbk_secret_key.age  secrets.nix
web/: package.json
